<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".fragments.MovieDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="56dp"
                app:expandedTitleMarginStart="40dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/movieParallaxImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="?android:attr/progressBarStyle" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                app:cardElevation="2dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="18dp"
                                            android:layout_height="18dp"
                                            android:layout_marginRight="5dp"
                                            android:src="@drawable/baseline_watch_later_black_18"
                                            android:tint="?attr/colorPrimary"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/s_duration"
                                            android:textSize="13sp"
                                            android:textStyle="bold"
                                            android:textColor="?attr/colorPrimary" />


                                    </LinearLayout>

                                    <TextView
                                        android:id="@+id/runtime"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:textSize="15sp"
                                        android:textColor="@android:color/black" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                app:cardElevation="2dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="18dp"
                                            android:layout_height="18dp"
                                            android:layout_marginRight="5dp"
                                            android:src="@drawable/baseline_star_rate_black_18"
                                            android:tint="?attr/colorPrimary"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/s_rating"
                                            android:textSize="13sp"
                                            android:textStyle="bold"
                                            android:textColor="?attr/colorPrimary" />


                                    </LinearLayout>

                                    <TextView
                                        android:id="@+id/rating"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:textSize="15sp"
                                        android:textColor="@android:color/black" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                app:cardElevation="2dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="18dp"
                                            android:layout_height="18dp"
                                            android:layout_marginRight="5dp"
                                            android:src="@drawable/baseline_star_rate_black_18"
                                            android:tint="?attr/colorPrimary"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/s_votes"
                                            android:textSize="13sp"
                                            android:textStyle="bold"
                                            android:textColor="?attr/colorPrimary" />


                                    </LinearLayout>

                                    <TextView
                                        android:id="@+id/votes"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:textSize="15sp"
                                        android:textColor="@android:color/black" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                app:cardElevation="2dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="18dp"
                                            android:layout_height="18dp"
                                            android:layout_marginRight="5dp"
                                            android:src="@drawable/baseline_show_chart_black_18"
                                            android:tint="?attr/colorPrimary"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/s_popularity"
                                            android:textSize="13sp"
                                            android:textStyle="bold"
                                            android:textColor="?attr/colorPrimary" />

                                    </LinearLayout>

                                    <TextView
                                        android:id="@+id/popularity"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:textSize="15sp"
                                        android:textColor="@android:color/black" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                    </HorizontalScrollView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/majority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardBackgroundColor="@android:color/holo_red_light"
                        app:contentPadding="10dp"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
                            android:text="@string/s_majority_warning" />

                    </androidx.cardview.widget.CardView>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@android:color/black"
                        android:alpha="0.1" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/genresGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@android:color/black"
                        android:alpha="0.1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/originalTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            android:textStyle="italic"/>

                        <TextView
                            android:id="@+id/releaseDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:textColor="?attr/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/overview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            android:lineSpacingExtra="3dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>